--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <link rel="stylesheet" href="./index_files/rad.css">
   <title>Radiacion Cherenkov</title>
 </head><body>
+	<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v9.0" nonce="QcTSE3j3"></script>
     <div>
         <div class="fondo">
             <a href="https://sebast3234.github.io/blogfisica/">
@@ -82,8 +84,10 @@ Los rayos cósmicos, compuestos principalmente por partículas cargadas, al inci
 <br>
 La polarización es asimétrica porque las moléculas que hay delante de la partícula no se han polarizado cuando las de detrás index lo han hecho. Las de delante no se han polarizado porque la partícula viaja más rápido que su propio campo eléctrico. Cuando la polarización es simétrica (cuando la partícula viaja a menor velocidad que la de la luz en el medio) no se produce radiación Cherenkov.
 El efecto Cherenkov es de gran utilidad en los detectores de partículas donde la susodicha radiación es usada como trazador. Particularmente en los detectores de neutrinos en agua pesada como el Super-Kamiokande. También en el tipo de telescopio conocido como telescopio Cherenkov como el telescopio MAGIC y el observatorio de rayos gamma HAWC, que detectan la luz Cherenkov producida en la atmósfera terrestre generada por la llegada de rayos gamma de muy alta energía procedentes del espacio. Los rayos gamma no tienen carga eléctrica, pero al incidir con los átomos de la atmósfera terrestre se produce una cascada de partículas que sí tienen carga eléctrica.
-
-</p>
+ 
+	<br> <br> <br>
+<div class="fb-comments" data-href="https://sebast3234.github.io/radiacion/" data-width="100%" data-numposts="5"></div>
+	</p>
 <footer class="footer">
   <div class="container footer__grid">
     <nav class="nav nav--footer"> 
