--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <link rel="stylesheet" href="./index_files/rad.css">
   <title>Radiacion Cherenkov</title>
 </head><body>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6883971258629206"
+     crossorigin="anonymous"></script>
 	<div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v9.0" nonce="QcTSE3j3"></script>
     <div>
